--- a/dlnd_image_classification.ipynb
+++ b/dlnd_image_classification.ipynb
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -559,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -581,7 +581,7 @@
     "    : return: A 2-D tensor where the second dimension is num_outputs.\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    return tf.contrib.layers.fully_connected(x_tensor, num_outputs)\n",
+    "    return tf.contrib.layers.fully_connected(x_tensor, num_outputs, activation_fn=None)\n",
     "\n",
     "\n",
     "\"\"\"\n",
